Fixed icons not showing up on mobile

--- a/src/app/styles/icons.scss
+++ b/src/app/styles/icons.scss
@@ -4,14 +4,14 @@
 //aktiviert
 .ion-ios-homewhite,
 .ion-md-homewhite {
-  content: url(../../assets/icon/home-dark.svg);
+  content: url(../assets/icon/home-dark.svg);
   opacity: 0.9;
 }
 
 //deaktiviert
 .ion-ios-homewhite-outline,
 .ion-md-homewhite-outline {
-  content: url(../../assets/icon/home-white.svg);
+  content: url(../assets/icon/home-white.svg);
   opacity: 0.9;
 }
 
@@ -19,14 +19,14 @@
 //aktiviert
 .ion-ios-addEvent,
 .ion-md-addEvent {
-  content: url(../../assets/icon/plus-dark.svg);
+  content: url(../assets/icon/plus-dark.svg);
   opacity: 0.9;
 }
 
 //deaktiviert
 .ion-ios-addEvent-outline,
 .ion-md-addEvent-outline {
-  content: url(../../assets/icon/plus-white.svg);
+  content: url(../assets/icon/plus-white.svg);
   opacity: 0.9;
 }
 
@@ -34,13 +34,13 @@
 //aktiviert
 .ion-ios-profile,
 .ion-md-profile {
-  content: url(../../assets/icon/ninja-dark.svg);
+  content: url(../assets/icon/ninja-dark.svg);
   opacity: 0.9;
 }
 
 //deaktiviert
 .ion-ios-profile-outline,
 .ion-md-profile-outline {
-  content: url(../../assets/icon/ninja-white.svg);
+  content: url(../assets/icon/ninja-white.svg);
   opacity: 0.9;
 }
